bppackaging/src/objects/CO_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Fixed_KitLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO Fixed KitLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CO_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Kit Header</label>
        <referenceTo>CO_Kit_Header__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_CO_Invoice_link__c</fullName>
        <label>Closed CO Invoice link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_In_Service_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <formula>IF( 
	Part__c != null,  
	Part__r.Part_Number__c &amp; &apos; - &apos; &amp; Part__r.Description__c, 
	IF(
		Fee__c != null,
		Fee__r.Fee_Unique_Name__c,
		&apos;&apos;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sublet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kit_Price_With_Price_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price With Price Level</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oversold_Qty__c</fullName>
        <label>Oversold Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Overrides__c</fullName>
        <formula>Retail__c -  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Overrides</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_To_Order__c</fullName>
        <formula>Qty__c -  Qty_Committed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty To Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <label>Retail</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Section_Identifier__c</fullName>
        <label>Section Identifier</label>
        <picklist>
            <picklistValues>
                <fullName>Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Job 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Job 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section_Type__c</fullName>
        <label>Section Type</label>
        <picklist>
            <picklistValues>
                <fullName>Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>CO Line Items</relationshipLabel>
        <relationshipName>CO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Total_With_Tax__c</fullName>
        <description>Subtotal value with tax</description>
        <formula>(Qty__c * Price__c) +  Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Without_Tax__c</fullName>
        <formula>Price__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Qty__c * Price__c * Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VO_Number__c</fullName>
        <label>VO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Status__c</fullName>
        <label>VO Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CO Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COLI-{00000000}</displayFormat>
        <label>CO Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Qty_in_case_of_Sublet_type</fullName>
        <active>true</active>
        <description>In case of Sublet Type, Qty should be one (1).</description>
        <errorConditionFormula>IF( (Text(Item_Type__c) == &apos;Sublet&apos; &amp;&amp;  Qty__c != 1), true, false)</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>For Sublet Item Type, Qty should be 1.</errorMessage>
    </validationRules>
</CustomObject>